<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="alert">Cảnh báo</string>
    <string name="app_name">FESGO</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="are_you_sure_delete">Bạn có chắc chắn muốn xoá các tiệp tin đã chọn ?</string>
    <string name="are_you_sure_logout">Bạn có muốn đăng xuất không ?</string>
    <string name="back_home_page">Bạn có muốn quay lại màn hình chính</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="cancel">Huỷ</string>
    <string name="cast_ad_label">Ad</string>
    <string name="cast_casting_to_device">Casting to %1$s</string>
    <string name="cast_closed_captions">Closed captions</string>
    <string name="cast_closed_captions_unavailable">Closed captions unavailable</string>
    <string name="cast_connecting_to_device">Connecting to %1$s</string>
    <string name="cast_disconnect">Disconnect</string>
    <string name="cast_expanded_controller_ad_image_description">Image displayed while the cast receiver is playing an ad</string>
    <string name="cast_expanded_controller_ad_in_progress">Ad in progress…</string>
    <string name="cast_expanded_controller_background_image">Album art</string>
    <string name="cast_expanded_controller_live_stream_indicator">Live stream</string>
    <string name="cast_expanded_controller_loading">Loading…</string>
    <string name="cast_expanded_controller_skip_ad_label">Skip</string>
    <string name="cast_forward">Forward</string>
    <string name="cast_forward_10">Forward ten seconds</string>
    <string name="cast_forward_30">Forward thirty seconds</string>
    <string name="cast_intro_overlay_button_text">@android:string/ok</string>
    <string name="cast_invalid_stream_duration_text">--:--</string>
    <string name="cast_invalid_stream_position_text">--:--</string>
    <string name="cast_mute">Mute</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_default_channel_name">Cast</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="cast_pause">Pause</string>
    <string name="cast_play">Play</string>
    <string name="cast_rewind">Rewind</string>
    <string name="cast_rewind_10">Rewind ten seconds</string>
    <string name="cast_rewind_30">Rewind thirty seconds</string>
    <string name="cast_seek_bar">Playback seek control</string>
    <string name="cast_skip_next">Skip to next item</string>
    <string name="cast_skip_prev">Skip to previous item</string>
    <string name="cast_stop">Stop</string>
    <string name="cast_stop_live_stream">Stop live stream</string>
    <string name="cast_tracks_chooser_dialog_audio">Audio</string>
    <string name="cast_tracks_chooser_dialog_cancel">Cancel</string>
    <string name="cast_tracks_chooser_dialog_closed_captions">Closed Captions</string>
    <string name="cast_tracks_chooser_dialog_default_track_name">Track %1$d</string>
    <string name="cast_tracks_chooser_dialog_none">None</string>
    <string name="cast_tracks_chooser_dialog_ok">OK</string>
    <string name="cast_tracks_chooser_dialog_subtitles">Subtitles</string>
    <string name="cast_unmute">Unmute</string>
    <string name="changepassword">Đổi mật khẩu</string>
    <string name="channel">Kênh sale</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="choice_document_you_want">Chọn hình thức tải lại bạn mong muốn</string>
    <string name="close">Đóng</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="converting_pdf">Đang chuyển đổi pdf…</string>
    <string name="create_document">Tạo hồ sơ</string>
    <string name="customer_id">CMND</string>
    <string name="customer_info">Thông tin khách hàng</string>
    <string name="customer_name">Tên khách hàng</string>
    <string name="date">Ngày</string>
    <string name="delete">Xoá</string>
    <string name="document">Chứng từ</string>
    <string name="empty_data">Vui lòng nhập dữ liệu</string>
    <string name="erro_open_file">Không tìm thấy ứng dụng để mở file. Vui lòng thử lại</string>
    <string name="error_change_password">Thay đổi mật khẩu thất bại, Vui lòng thử lại</string>
    <string name="error_cmnd">CMND phải nhập số và đủ 8|9|12 số</string>
    <string name="error_convert_hinhkh">Chuyển đổi thất bại. Vui lòng thử lại</string>
    <string name="error_convert_pdf_fail">Chuyển đổi pdf thất bại,Vui lòng thử lại</string>
    <string name="error_data">Không thể lấy được dữ liệu, Vui lòng thử lại</string>
    <string name="error_data_empty">Không tìm thấy dữ liệu, Vui lòng thử lại</string>
    <string name="error_data_idf1">Vui lòng tìm kiếm thông tin khách hàng trước khi tiếp tục</string>
    <string name="error_dont_create_fesgo">Chứng từ này không cho phép lấy hình từ Gallery</string>
    <string name="error_empty_customer_id">Tên khách hàng và CMND không được rỗng</string>
    <string name="error_empty_document">Không tìm thấy chứng từ để upload, Vui lòng thử lại</string>
    <string name="error_empty_list_convert_pdf">Vui lòng chọn hình ảnh để chuyển đổi pdf</string>
    <string name="error_empty_password">Vui lòng nhập mật khẩu</string>
    <string name="error_empty_reason">Vui lòng nhập lý do</string>
    <string name="error_empty_username">Vui lòng nhập tên đăng nhập</string>
    <string name="error_hard_qde">Vui lòng chọn chứng từ cần bổ sung</string>
    <string name="error_hinhkh">Vui lòng chụp hình khách hàng trước</string>
    <string name="error_idf1">IDF1 phải 7 hoặc 8 số</string>
    <string name="error_kh">Tên khách hàng phải từ 3 ký tự trở lên</string>
    <string name="error_login">Đăng nhập thất bại, vui lòng thử lại</string>
    <string name="error_not_folder_customer">Vui lòng chọn đúng folder khách hàng</string>
    <string name="error_not_found_app">Không tìm thấy ứng dụng mở PDF</string>
    <string name="error_not_found_customer">Không tìm thấy thông tin khách hàng</string>
    <string name="error_open_gallery">Chứng từ này không cho phép lấy hình từ thư viện</string>
    <string name="error_pass_step">Vui lòng sửa lỗi trước khi tiếp tục</string>
    <string name="error_please_choice_one_folder">Vui lòng chỉ chọn một folder của khách hàng.</string>
    <string name="error_reason">Vui lòng nhập lý do</string>
    <string name="error_required_document">Vui lòng chụp đủ chứng từ bắt buộc (*)</string>
    <string name="error_sdcard">Vui lòng kiểm tra lại thẻ nhớ hoặc trang bị thẻ nhớ</string>
    <string name="error_takephoto">Không thể lấy hình ảnh từ camera, Vui lòng thử lại</string>
    <string name="error_upload">Upload thất bại. Vui lòng thử lại</string>
    <string name="help">Trợ giúp</string>
    <string name="hint_valid_password">Mật khẩu ít nhất 8 ký tự và phải có chứa các ký tự : chữ hoa, chữ thường, số và ký tự đặc biệt</string>
    <string name="info_upload">Thông tin upload</string>
    <string name="infowifi3g">Thông tin thiết bị và mạng 3G</string>
    <string name="list_document">Danh sách hồ sơ</string>
    <string name="login">Đăng nhập</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="newapp">New App</string>
    <string name="old_password">Mật khẩu cũ</string>
    <string name="password">Mật khẩu</string>
    <string name="product">Sản phẩm</string>
    <string name="qde">QDE</string>
    <string name="re_new_pasword">Lặp lại mật khẩu mới</string>
    <string name="reason">Lý do</string>
    <string name="save">Lưu lại</string>
    <string name="search">Tìm</string>
    <string name="show_password">Hiển thị mật khẩu</string>
    <string name="type">Loại</string>
    <string name="userguide">Hướng dẫn sử dụng</string>
    <string name="username">Tên đăng nhập</string>
    <string name="weak">Yếu</string>
</resources>