<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="24.0sp" android:textStyle="bold" android:textColor="@android:color/holo_blue_dark" android:id="@id/textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/changepassword" android:layout_marginStart="24.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <View android:id="@id/view2" android:background="@android:color/holo_green_light" android:layout_width="0.0dip" android:layout_height="1.0dip" android:layout_marginTop="8.0dip" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/textView" />
    <EditText android:id="@id/edOldPassword" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:hint="@string/old_password" android:ems="10" android:inputType="textPassword" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="@id/view2" app:layout_constraintStart_toStartOf="@id/view2" app:layout_constraintTop_toBottomOf="@id/view2" />
    <EditText android:id="@id/edNewPassword" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:hint="@string/new_password" android:ems="10" android:inputType="textPassword" app:layout_constraintEnd_toEndOf="@id/edOldPassword" app:layout_constraintStart_toStartOf="@id/edOldPassword" app:layout_constraintTop_toBottomOf="@id/edOldPassword" />
    <EditText android:id="@id/edReNewPassword" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:hint="@string/re_new_pasword" android:ems="10" android:inputType="textPassword" app:layout_constraintEnd_toEndOf="@id/edNewPassword" app:layout_constraintStart_toStartOf="@id/edNewPassword" app:layout_constraintTop_toBottomOf="@id/edNewPassword" />
    <ProgressBar android:id="@id/progressBarWeakPass" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toStartOf="@id/txtCheckWeakPassword" app:layout_constraintStart_toStartOf="@id/edReNewPassword" app:layout_constraintTop_toBottomOf="@id/edReNewPassword" style="?android:progressBarStyleHorizontal" />
    <TextView android:id="@id/txtCheckWeakPassword" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/weak" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="@id/edReNewPassword" app:layout_constraintTop_toBottomOf="@id/edReNewPassword" />
    <TextView android:id="@id/textView3" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/hint_valid_password" app:layout_constraintEnd_toEndOf="@id/edReNewPassword" app:layout_constraintStart_toStartOf="@id/edReNewPassword" app:layout_constraintTop_toBottomOf="@id/progressBarWeakPass" />
    <Button android:textColor="@android:color/background_light" android:id="@id/btnSavePassword" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/save" android:backgroundTint="@android:color/holo_blue_dark" app:layout_constraintEnd_toEndOf="@id/edReNewPassword" app:layout_constraintTop_toBottomOf="@id/textView3" />
    <CheckBox android:textColor="@android:color/holo_blue_bright" android:id="@id/cbShowPassword" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" android:text="@string/show_password" app:layout_constraintBottom_toBottomOf="@id/btnSavePassword" app:layout_constraintStart_toStartOf="@id/edReNewPassword" app:layout_constraintTop_toTopOf="@id/btnSavePassword" />
    <ProgressBar android:id="@id/progressBar" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/cbShowPassword" style="?android:progressBarStyle" />
</android.support.constraint.ConstraintLayout>