<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textStyle="bold" android:textColor="@android:color/background_light" android:id="@id/textView6" android:background="@color/colorAccent" android:padding="16.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/help" android:textAlignment="center" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <Button android:id="@id/btnUserGuide" android:background="?selectableItemBackground" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/userguide" android:textAllCaps="false" android:textAlignment="textStart" android:paddingStart="8.0dip" android:paddingEnd="8.0dip" app:layout_constraintEnd_toEndOf="@id/textView6" app:layout_constraintStart_toStartOf="@id/textView6" app:layout_constraintTop_toBottomOf="@id/textView6" />
    <Button android:id="@id/btnInfoWifi" android:background="?selectableItemBackground" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/infowifi3g" android:textAllCaps="false" android:textAlignment="textStart" android:paddingStart="8.0dip" android:paddingEnd="8.0dip" app:layout_constraintEnd_toEndOf="@id/btnUserGuide" app:layout_constraintStart_toStartOf="@id/btnUserGuide" app:layout_constraintTop_toBottomOf="@id/btnUserGuide" />
    <Button android:id="@id/btnSecurityKey" android:background="?selectableItemBackground" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="Button" android:textAllCaps="false" android:textAlignment="textStart" android:paddingStart="8.0dip" android:paddingEnd="8.0dip" app:layout_constraintEnd_toEndOf="@id/btnInfoWifi" app:layout_constraintStart_toStartOf="@id/btnInfoWifi" app:layout_constraintTop_toBottomOf="@id/btnInfoWifi" />
    <Button android:id="@id/btnChangePasswrod" android:background="?selectableItemBackground" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/changepassword" android:textAllCaps="false" android:textAlignment="textStart" android:paddingStart="8.0dip" android:paddingEnd="8.0dip" app:layout_constraintEnd_toEndOf="@id/btnSecurityKey" app:layout_constraintStart_toStartOf="@id/btnSecurityKey" app:layout_constraintTop_toBottomOf="@id/btnSecurityKey" />
    <Button android:textColor="@color/cast_libraries_material_featurehighlight_outer_highlight_default_color" android:id="@id/btnclose" android:background="?selectableItemBackground" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/close" android:textAllCaps="false" android:textAlignment="center" android:paddingStart="8.0dip" android:paddingEnd="8.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@id/btnChangePasswrod" app:layout_constraintStart_toStartOf="@id/btnChangePasswrod" app:layout_constraintTop_toBottomOf="@id/btnChangePasswrod" />
</android.support.constraint.ConstraintLayout>