<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.ConstraintLayout android:id="@id/constraintLayout" android:background="@drawable/circle_gray_background" android:padding="16.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/view3">
        <EditText android:id="@id/edIDF1" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:hint="IDF1" android:ems="10" android:maxLength="8" android:inputType="number" android:drawableStart="@drawable/ic_card" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toStartOf="@id/btnCheckIDF1" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <Button android:textColor="@android:color/background_light" android:id="@id/btnCheckIDF1" android:background="@android:color/holo_blue_bright" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/search" android:textAllCaps="false" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/edIDF1" app:layout_constraintTop_toTopOf="parent" />
        <EditText android:id="@id/edCustomerName" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:hint="@string/customer_name" android:ems="10" android:inputType="textCapWords" android:textAllCaps="true" android:drawableStart="@drawable/ic_customer" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/edIDF1" />
        <EditText android:id="@id/edCMND" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:hint="@string/customer_id" android:ems="10" android:maxLength="12" android:inputType="number" android:drawableStart="@drawable/ic_card" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/edCustomerName" />
        <EditText android:enabled="false" android:id="@id/edChannel" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:hint="@string/channel" android:ems="10" android:inputType="textPersonName" android:drawableStart="@drawable/ic_channel" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/edCMND" />
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout android:id="@id/containerSpinner" android:background="@drawable/circle_gray_background" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/constraintLayout">
        <TextView android:textSize="18.0sp" android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginBottom="16.0dip" android:text="@string/product" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/spinnerProduct" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <Spinner android:id="@id/spinnerProduct" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintBottom_toBottomOf="@id/textView2" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/textView2" app:layout_constraintTop_toTopOf="@id/textView2" />
    </android.support.constraint.ConstraintLayout>
    <TextView android:textSize="24.0sp" android:textStyle="bold" android:textColor="@android:color/holo_blue_dark" android:id="@id/textView4" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/customer_info" android:textAlignment="center" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <View android:id="@id/view3" android:background="@android:color/holo_blue_dark" android:layout_width="0.0dip" android:layout_height="1.0dip" android:layout_marginTop="8.0dip" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/textView4" />
</android.support.constraint.ConstraintLayout>