<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:id="@id/textView8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/type" android:layout_marginStart="8.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <CheckBox android:id="@id/cbNewApp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/newapp" android:layout_marginStart="8.0dip" app:layout_constraintBottom_toBottomOf="@id/textView8" app:layout_constraintStart_toEndOf="@id/textView8" app:layout_constraintTop_toTopOf="@id/textView8" />
    <CheckBox android:id="@id/cbQDE" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/qde" android:layout_marginStart="32.0dip" app:layout_constraintBottom_toBottomOf="@id/cbNewApp" app:layout_constraintStart_toEndOf="@id/cbNewApp" app:layout_constraintTop_toTopOf="@id/cbNewApp" />
    <TextView android:id="@id/textView10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/date" app:layout_constraintStart_toStartOf="@id/textView8" app:layout_constraintTop_toBottomOf="@id/cbNewApp" />
    <Button android:textColor="@android:color/background_light" android:id="@id/btnFromDateTTHS" android:background="@drawable/button_selected_background" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="32.0dip" android:text="4/9/2018" android:textAllCaps="false" android:drawableStart="@drawable/baseline_insert_invitation_white_24" android:layout_marginStart="8.0dip" app:layout_constraintBottom_toBottomOf="@id/textView10" app:layout_constraintStart_toEndOf="@id/textView10" app:layout_constraintTop_toTopOf="@id/textView10" />
    <Button android:textColor="@android:color/background_light" android:id="@id/btnToDateTTHS" android:background="@drawable/button_selected_background" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="32.0dip" android:text="4/9/2018" android:textAllCaps="false" android:drawableStart="@drawable/baseline_insert_invitation_white_24" android:layout_marginStart="8.0dip" app:layout_constraintBottom_toBottomOf="@id/btnFromDateTTHS" app:layout_constraintStart_toEndOf="@id/btnFromDateTTHS" app:layout_constraintTop_toTopOf="@id/btnFromDateTTHS" />
    <ImageButton android:id="@id/btnSearch" android:background="@drawable/button_selected_background" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="32.0dip" android:layout_marginStart="8.0dip" app:layout_constraintBottom_toBottomOf="@id/btnToDateTTHS" app:layout_constraintStart_toEndOf="@id/btnToDateTTHS" app:layout_constraintTop_toTopOf="@id/btnToDateTTHS" app:srcCompat="@drawable/baseline_search_white_24" />
    <android.support.v7.widget.RecyclerView android:id="@id/recyclerViewHistoryUploaded" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/btnToDateTTHS" />
</android.support.constraint.ConstraintLayout>