<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="24.0sp" android:textStyle="bold" android:textColor="@android:color/holo_blue_dark" android:id="@id/txtTitleCreateDocument" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/info_upload" android:textAlignment="center" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <View android:id="@id/view4" android:background="@android:color/holo_blue_dark" android:layout_width="0.0dip" android:layout_height="1.0dip" android:layout_marginTop="8.0dip" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/txtTitleCreateDocument" />
    <TextView android:textColor="@android:color/holo_blue_dark" android:id="@id/txtTitleReason" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/reason" app:layout_constraintStart_toStartOf="@id/txtTitleCreateDocument" app:layout_constraintTop_toBottomOf="@id/view4" />
    <TextView android:id="@id/txtLastStatus" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="TextView" app:layout_constraintEnd_toEndOf="@id/view4" app:layout_constraintStart_toStartOf="@id/txtTitleReason" app:layout_constraintTop_toBottomOf="@id/txtTitleReason" />
    <TextView android:textColor="@android:color/holo_blue_dark" android:id="@id/txtTitleListPDFDocument" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/list_document" app:layout_constraintStart_toStartOf="@id/view4" app:layout_constraintTop_toBottomOf="@id/txtLastStatus" />
    <android.support.v7.widget.RecyclerView android:id="@id/recyclerStepThree" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@id/txtLastStatus" app:layout_constraintStart_toStartOf="@id/txtTitleListPDFDocument" app:layout_constraintTop_toBottomOf="@id/txtTitleListPDFDocument" />
</android.support.constraint.ConstraintLayout>