<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/imageView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginStart="16.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/ic_login" />
    <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@android:color/holo_blue_dark" android:id="@id/txtTitleLogin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" android:text="@string/login" android:layout_marginStart="8.0dip" app:layout_constraintBottom_toBottomOf="@id/imageView2" app:layout_constraintStart_toEndOf="@id/imageView2" app:layout_constraintTop_toTopOf="@id/imageView2" />
    <View android:id="@id/view" android:background="@android:color/holo_green_light" android:layout_width="0.0dip" android:layout_height="1.0dip" android:layout_marginTop="8.0dip" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="@id/imageView2" app:layout_constraintTop_toBottomOf="@id/txtTitleLogin" />
    <EditText android:textSize="14.0sp" android:id="@id/edUserName" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:hint="@string/username" android:ems="10" android:inputType="textPersonName" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="@id/view" app:layout_constraintStart_toStartOf="@id/imageView2" app:layout_constraintTop_toBottomOf="@id/view" />
    <EditText android:textSize="14.0sp" android:id="@id/edPassword" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:hint="@string/password" android:ems="10" android:inputType="textPassword" app:layout_constraintEnd_toEndOf="@id/edUserName" app:layout_constraintStart_toStartOf="@id/edUserName" app:layout_constraintTop_toBottomOf="@id/edUserName" />
    <Button android:textColor="@android:color/background_light" android:id="@id/btnLogin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/login" android:backgroundTint="@android:color/holo_blue_dark" app:layout_constraintEnd_toEndOf="@id/edPassword" app:layout_constraintTop_toBottomOf="@id/edPassword" />
    <TextView android:textSize="12.0sp" android:textStyle="bold" android:textColor="@android:color/holo_blue_dark" android:id="@id/txtSecurityKey" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="TextView" android:layout_marginEnd="8.0dip" app:layout_constraintBottom_toBottomOf="@id/btnLogin" app:layout_constraintEnd_toStartOf="@id/btnLogin" app:layout_constraintStart_toStartOf="@id/edPassword" app:layout_constraintTop_toTopOf="@id/btnLogin" />
    <ProgressBar android:id="@id/progressBar" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/txtSecurityKey" style="?android:progressBarStyle" />
</android.support.constraint.ConstraintLayout>